examples/invalid/yir/cpu_use_after_free_invalid.yir
yir 0.1

resource cpu0 cpu.arm64

cpu.null nil cpu0
cpu.const v1 cpu0 10
cpu.alloc_node head_raw cpu0 v1 nil
cpu.move_ptr head cpu0 head_raw
cpu.free drop_head cpu0 head
cpu.load_value bad_read cpu0 head

edge dep v1 head_raw
edge dep nil head_raw
edge dep head_raw head
edge lifetime head_raw head
edge dep head drop_head
edge effect head drop_head
edge lifetime head drop_head
edge dep head bad_read
edge effect drop_head bad_read
